feat(foia): update FOIA page with new contact info

--- a/templates/foia.html
+++ b/templates/foia.html
@@ -221,7 +221,7 @@
       <p class="small">Phone: 317-477-1125</p>
       <p class="small">
         <a href="https://www.hancockin.gov/187/Public-Records-Request" target="_blank" rel="noopener">
-          Information
+          Court Request Information
         </a>
       </p>
     </div>
