--- a/templates/foia.html
+++ b/templates/foia.html
@@ -213,7 +213,21 @@
         </a>
       </p>
     </div>
-  
+    <div class="qa-block">
+      <p><strong>Boone County Indiana</strong></p>
+      <p class="small">Dependent on the specific county office</p>
+      <p class="small">Boone County Sheriff's Office</p>
+      <p class="small">Phone: 765-483-3372</p>
+      <p class="small">
+        <a href="https://johnsoncountysheriff.com/records-division/" target="_blank" rel="noopener">
+          Request Information
+        </a>
+      </p>
+        <a href="https://boonecountyin-sheriff.nextrequest.com/" target="_blank" rel="noopener">
+          Request Portal
+        </a>
+      </p>
+    </div>
     <div class="qa-block">
       <p><strong>Hancock County Indiana</strong></p>
       <p class="small">Dependent on the specific county office</p>
@@ -222,6 +236,87 @@
       <p class="small">
         <a href="https://www.hancockin.gov/187/Public-Records-Request" target="_blank" rel="noopener">
           Court Request Information
+        </a>
+      </p>
+      <p class="small">
+        <a href="https://www.nfoic.org/indiana-sample-foia-request/" target="_blank" rel="noopener">
+          Sample Request Form
+        </a>
+      </p>
+    </div>
+    <div class="qa-block">
+      <p><strong>Hamilton County Indiana</strong></p>
+      <p class="small">Dependent on the specific county office</p>
+      <p class="small">Prosecutor's Office</p>
+      <p class="small">Phone: 317-776-8595</p>
+      <p class="small">
+        <a href="https://www.hamiltoncounty.in.gov/Faq.aspx?QID=320" target="_blank" rel="noopener">
+          Request Information
+        </a>
+      </p>
+      <p class="small">
+        <a href="https://www.hamiltoncounty.in.gov/DocumentCenter/View/5391" target="_blank" rel="noopener">
+          Request Form
+        </a>
+      </p>
+    </div>
+    <div class="qa-block">
+      <p><strong>Hendricks County Indiana</strong></p>
+      <p class="small">Clerks Office</p>
+      <p class="small">Phone: 317-745-9231</p>
+      <p class="small">
+        <a href="https://www.co.hendricks.in.us/department/index.php?structureid=30" target="_blank" rel="noopener">
+          County Clerk Website
+        </a>
+      </p>
+      <p class="small">
+        <a href="https://www.nfoic.org/indiana-sample-foia-request/" target="_blank" rel="noopener">
+          Sample Request Form
+        </a>
+      </p>
+    </div>
+    <div class="qa-block">
+      <p><strong>Johnson County Indiana</strong></p>
+      <p class="small">Dependent on the specific county office</p>
+      <p class="small">Johnson County Sheriff's Office</p>
+      <p class="small">Phone: 317-736-9155</p>
+      <p class="small">
+        <a href="https://johnsoncountysheriff.com/records-division/" target="_blank" rel="noopener">
+          Request Information
+        </a>
+      </p>
+        <a href="https://johnsoncountysheriff.com/wp-content/uploads/2019/05/Public-Records.pdf" target="_blank" rel="noopener">
+          JCSO Request Form
+        </a>
+      </p>
+    </div>
+    <div class="qa-block">
+      <p><strong>Madison County Indiana</strong></p>
+      <p class="small">Dependent on the specific county office</p>
+      <p class="small">Madison County Records</p>
+      <p class="small">Phone: 317-265-8324</p>
+      <p class="small">
+        <a href="https://www.madisoncounty.in.gov/recorders-office-services" target="_blank" rel="noopener">
+          Request Information
+        </a>
+      </p>
+        <a href="https://www.madison-in.gov/egov/documents/ffd84afe_6aa2_e7e8_718e_ac3cd9199645.pdf" target="_blank" rel="noopener">
+          Request Form
+        </a>
+      </p>
+    </div>
+    <div class="qa-block">
+      <p><strong>Shelby County Indiana</strong></p>
+      <p class="small">Dependent on the specific county office</p>
+      <p class="small">Shelby County Sheriff's Office</p>
+      <p class="small">Phone: 317-392-6345</p>
+      <p class="small">
+        <a href="https://www.in.gov/counties/shelby/sheriff/" target="_blank" rel="noopener">
+          Request Information
+        </a>
+      </p>
+        <a href="https://www.nfoic.org/indiana-sample-foia-request/" target="_blank" rel="noopener">
+          Sample Request Form
         </a>
       </p>
     </div>
