--- a/templates/admin/edit_post.html
+++ b/templates/admin/edit_post.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin/admin_base.html" %}
 {% block title %}Admin — Edit Post{% endblock %}
 {% block content %}
   <div class="card">
