--- a/templates/admin/admin_base.html
+++ b/templates/admin/admin_base.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}NewsNowIndy - Admin Dash{% endblock %}</title>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}?v={{ APP_VERSION }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     </head>
     
